added loads of content

--- a/elteikthesis-master/samples_hu/intro.tex
+++ b/elteikthesis-master/samples_hu/intro.tex
@@ -2,7 +2,7 @@
 \label{ch:intro}
 
 \section{A számításelmélet rövid története}
-A számításelmélet az 1930-as évek középén Alan Turing és Alonzo Church munkássága révén vált külön tudományággá, amelynek központjában a számítások és a számítógépek formális modellezése és elemzése áll. A terület azóta is kulcsfontosságú szerepet kap az informatikában. Az előbb említett matematikai logikával foglalkozó tudósok és társaik arra a kérdésre szerettek volna választ adni, hogy mit jelent maga a számítás? Ezzel az algoritmus matematikai modelljének megalkotását tűzték ki célul. Természetesen a számításelmélet létrejötte előtt is születtek algoritmusok, de azok nem törekedtek formalitásra, hanem egyszerűen csak rögzítették a végrehajtandó utasítások sorrendjét. A kérdés megválaszolása érdekében Turing bevezette a Turing gépet, Church pedig a lambda kalkulust. Ezen eszközök segítségével elkezdték vizsgálni a kiszámíthatóságot. Azt fedezték fel, hogy vannak olyan számítási feladatok, amelyekre nem adható algoritmikusan válasz, illetve, hogy vannak olyan univerzális számítógépek, amelyek minden másik számításra alkalmas gépet szimulálni tudnak.
+A számításelmélet az 1930-as évek középén Alan Turing és Alonzo Church munkássága révén vált külön tudományággá, amelynek központjában a számítások és a számítógépek formális modellezése és elemzése áll \cite{savage2008modelsofcomp}. A terület azóta is kulcsfontosságú szerepet kap az informatikában. Az előbb említett matematikai logikával foglalkozó tudósok és társaik arra a kérdésre szerettek volna választ adni, hogy mit jelent maga a számítás? Ezzel az algoritmus matematikai modelljének megalkotását tűzték ki célul. Természetesen a számításelmélet létrejötte előtt is születtek algoritmusok, de azok nem törekedtek formalitásra, hanem egyszerűen csak rögzítették a végrehajtandó utasítások sorrendjét. A kérdés megválaszolása érdekében Turing bevezette a Turing gépet, Church pedig a lambda kalkulust. Ezen eszközök segítségével elkezdték vizsgálni a kiszámíthatóságot. Azt fedezték fel, hogy vannak olyan számítási feladatok, amelyekre nem adható algoritmikusan válasz, illetve, hogy vannak olyan univerzális számítógépek, amelyek minden másik számításra alkalmas gépet szimulálni tudnak.
 Ez vezetett a Church-Turing tézis megfogalmazásához, amely szerint minden olyan matematikailag formalizálható probléma, ami megoldható valamilyen algoritmussal, az Turing géppel is megoldható. Később kiderült, hogy léteznek a Turing géppel azonos számítási erejű modellek, viszont azóta sem találtak ennél nagyobb számítási erővel rendelkező absztrakt modellt. Ezek szerint ha elfogadjuk a tézist, akkor a Turing gép tekinthető az algoritmus formális modelljének.
 
 A tudományág fejlődését ösztönözte és elősegítette a digitális számítógépek megjelenése. A tézis után pár évvel Konrad Zuse elkészítette az első általános célú programozható elektromechanikus számítógépet, amelyet elektromágneses relékkel működtetett. 1945-ben készült el az első teljesen elektromos számítógép, az ENIAC, majd Neumann János 1947-ben megfogalmazta a mai számítógép működésének alapjául szolgáló Neumann-elveket. Azóta a számítógépek számítási kapacitása rohamos ütemben növekedik, ám az akkor fontosnak vélt számítási elemzések és korlátok a mai napig fontos szempontot adnak algoritmusok megalkotásánál.
@@ -18,7 +18,7 @@ Mindezekből látszik, hogy milyen szerteágazó tematikája és problémaköre 
 
 \section{Membránrendszerek}
 
-A 20. század második felében egyre nagyobb figyelmet kaptak az olyan számítások, amely a természetben vagy valamilyen természeti jelenséghez kapcsolódóan mennek végbe. Ezen megfigyelések eredményeképpen megszületett a biológiai számítások területe, amelynek számos új módszert és algoritmust köszönhetünk. Ide tartoznak például a genetikus algoritmusok (általánosabban véve az evolúciós algoritmusok), illetve a neurális hálók. Ezen irányvonal kiterjesztésének tekinthetőek az 21.század legelejére kibontakozó területek mint a membránszámítások és a DNS számítások, amelyek közül az utóbbit a molekuláris biológia alapjaira modelleztek.
+A 20. század második felében egyre nagyobb figyelmet kaptak az olyan számítások, amely a természetben vagy valamilyen természeti jelenséghez kapcsolódóan mennek végbe \cite{paun2002membrane}. Ezen megfigyelések eredményeképpen megszületett a biológiai számítások területe, amelynek számos új módszert és algoritmust köszönhetünk. Ide tartoznak például a genetikus algoritmusok (általánosabban véve az evolúciós algoritmusok), illetve a neurális hálók. Ezen irányvonal kiterjesztésének tekinthetőek az 21.század legelejére kibontakozó területek mint a membránszámítások és a DNS számítások, amelyek közül az utóbbit a molekuláris biológia alapjaira modelleztek.
 
 A membránszámítások legnagyobb inspirációját a biológiai sejtek jelentik, amelyek az élet legelemibb építőelemei. A sejtek működésében és struktúrájában pedig elengedhetetlenek a membránok, amelyek a sejten belüli rétegződést határozzák meg. Egy sejtet a környezetétől a legkülső membránja (úgynevezett skin) határol el, a rétegződésért pedig a belső membránok felelősek.  Egy-egy ilyen membrán pedig egy saját belső teret, \textit{régiót} határol el.
 Ezen régiókban pedig kémiai reakciók mehetnek végbe, amely hatására különböző molekulák átvándorolhatnak a membránokon keresztül új régiókba. Ezzel a térbeli struktúráltsággal egészítik ki a membránszámítások a DNS számításokat.A  membránszámítás motivációja, hogy egy olyan modellt tudjuk konstruálni, amely képes a sejtek közötti és sejten belüli molekulák által közvetített információáramlás mechanizmusának leírására, szemléltetésére.
