--- a/elteikthesis-master/samples_hu/user.tex
+++ b/elteikthesis-master/samples_hu/user.tex
@@ -41,6 +41,7 @@ A legfontosabb interakció a felhasználó és a szoftver között a dialógisab
 Egy membránrendszer megalkotásának kezdeti módja a struktúrájának megadásával kezdődik. Mivel egy membránrendszerben a membránok hierarchikusan helyezkednek el, ezért a teljes rétegződést nagyon jól lehet ábrázolni fa alakban, ahol mindenkinek a szülő csúcsa az őt legszűkebben tartalmazó régió. 
 
 Ezzel egyenértékű az a felírás, amikor egyetlen karakterláncban fejezzük ki ugyanezt, azáltal, hogy egy régiót megfeleltetünk egy nyitó-csukó zárójelpárral. Ilyenkor a két zárójel között elhelyezett objektumok jelentik a régió tartalmát. Azonban nem csak objektumok, de más régiók is helyet kaphatnak, ezzel kifejezve azt, hogy a már említett régió közvetlen gyerekét szeretnénk megadni. 
+Az alkalmazásban a struktúra megadása a menüsorban található \textit{Membránstruktúra megadása} gombbal kezdeményezhető.
 
 \begin{figure}[H]
 	\centering
@@ -158,7 +159,7 @@ Mivel a \textit{JSON} formátum könnyen értelmezhető és szerkeszthető, ezé
 
 \begin{figure}[H]
 	\centering
-	\scalebox{0.4}[0.4]{\includegraphics{saved_json.png}}
+	\scalebox{0.4}[0.4]{\includegraphics{saved_json_antiport.png}}
 	\caption{Egy lementett membránrendszerhez tartozó JSON fájl  \protect\footnotemark}
 	\label{fig:saved_json}
 \end{figure}
