--- a/elteikthesis-master/thesis.bib
+++ b/elteikthesis-master/thesis.bib
@@ -1,11 +1,24 @@
-@book{dahl1972structured,
-	editor = {Dahl, O. J. and Dijkstra, E. W. and Hoare, C. A. R.},
-	title = {Structured Programming},
-	year = {1972},
-	isbn = {0-12-200550-3},
-	source = {Library of Congress Catalog Card Number: 72-84452},
-	publisher = {Academic Press Ltd.},
-	address = {London, UK, UK},
+@misc{tichler_slides,
+  author={Tichler Krisztián},
+  title = {Számítási modellek},
+  howpublished = {Egyetemi jegyzet},
+  year = {2021},
+}
+
+@book{paun2002membrane,
+	editor = {Gheorghe Paun.},
+	title = {Membrane Computing},
+	year = {2002},
+	isbn = {978-3-540-43601-0},
+	source = {Springer Book Archive},
+	publisher = {Springer, Berlin, Heidelberg},
+}
+
+@book{savage2008modelsofcomp,
+	editor = {John E. Savage},
+	title = {Models of Computation},
+	year = {2008},
+	howpublished = {\url{https://cs.brown.edu/people/jsavage/book/pdfs/ModelsOfComputation.pdf}}
 }
 
 @book{cormen2009algorithms,
@@ -49,3 +62,4 @@
 	publisher = {SIGS Publications},
 	address = {Denville, NJ, USA},
 } 
+
