--- a/elteikthesis-master/thesis_hu.tex
+++ b/elteikthesis-master/thesis_hu.tex
@@ -22,8 +22,6 @@
 % Superivsor(s)' metadata
 \supervisor{Kolonits Gábor} % internal supervisor's name
 \affiliation{egyetemi tanársegéd} % internal supervisor's affiliation
-%\extsupervisor{Külső Kornél} % external supervisor's name
-%\extaffiliation{informatikai igazgató} % external supervisor's affiliation
 
 % University's metadata
 \university{Eötvös Loránd Tudományegyetem} % university's name
@@ -71,9 +69,9 @@
 \cleardoublepage
 
 % Appendices (optional) - useful for detailed information in long tables, many and/or large figures, etc.
-\appendix
-\input{samples_hu/sim.tex}
-\cleardoublepage
+%\appendix
+%\input{samples_hu/sim.tex}
+%\cleardoublepage
 
 % Bibliography (mandatory)
 \phantomsection
@@ -94,10 +92,10 @@
 \cleardoublepage
 
 % List of algorithms (optional) - useful over 3-5 algorithms
-\phantomsection
-\addcontentsline{toc}{chapter}{\lstalgorithmlabel}
-\listofalgorithms
-\cleardoublepage
+%\phantomsection
+%\addcontentsline{toc}{chapter}{\lstalgorithmlabel}
+%\listofalgorithms
+%\cleardoublepage
 
 % List of codes (optional) - useful over 3-5 code samples
 \phantomsection
