--- a/elteikthesis-master/samples_hu/sum.tex
+++ b/elteikthesis-master/samples_hu/sum.tex
@@ -1,6 +1,7 @@
 \chapter{Összegzés}
 \label{ch:sum}
+A megvalósított szoftver a membránrendszerek alapmodelljének és szimport-antiport rendszerek tetszőleges példányát képes a felhasználó által megadott konfiguráció segítségével megalkotni, majd szimulálni.  A szimulálás során biztosítja a nemdeterminisztikusságot, amelynek szemléltetésére a membránrendszer aktuális állapotából kiinduló párhuzamos számítások esetén egy összegzést készít a felhasználó számára.A lépésenkénti futtatás során is tanúja lehet a felhasználó a rendszer véletlenszerű fejlődésének.
+A membránrendszerekkel való ismerkedés és az alkalmazás teljes funkcionalitásának elsajátítása céljából egy használati útmutató is található az alkalmazásban, amely elegendő információt nyújt az előbb említett mindkét területen való kezdeti útbaigazításhoz. Az absztrakt modellhez és a természet által inspirált struktúrához a membránrendszer a grafikus felületen vizuálisan jelenik meg, így az a használat során egy felhasználóbarát és intuitív interaktív interfészt biztosít a mögöttes reprezentáció manipulálásához. Így a matematikailag nehezen leírható konfigurációk és konfigurációátmenet-sorozatok egyszerűen és szemléletesen mutathatók be, amely intuíció könnyebb megértést ad a definícióhoz.
+A modellezés során kulcsfontosságú metódusok az alkalmazás tervezési fázisában majdnem teljes mértékben elkészültek, ám az eredeti modell megvalósítása után felbukkant pár kezeletlen eset, illetve  módosítandó algoritmus. Ezen hibák kiszűrésében és a helyes implementáció megalkotásában központi szerepet játszottak az egyes osztályokhoz és funkciókhoz tartozó egységtesztek.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu egestas mauris. Quisque nisl elit, varius in erat eu, dictum commodo lorem. Sed commodo libero et sem laoreet consectetur. Fusce ligula arcu, vestibulum et sodales vel, venenatis at velit. Aliquam erat volutpat. Proin condimentum accumsan velit id hendrerit. Cras egestas arcu quis felis placerat, ut sodales velit malesuada. Maecenas et turpis eu turpis placerat euismod. Maecenas a urna viverra, scelerisque nibh ut, malesuada ex.
-
-Aliquam suscipit dignissim tempor. Praesent tortor libero, feugiat et tellus porttitor, malesuada eleifend felis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam eleifend imperdiet lorem, sit amet imperdiet metus pellentesque vitae. Donec nec ligula urna. Aliquam bibendum tempor diam, sed lacinia eros dapibus id. Donec sed vehicula turpis. Aliquam hendrerit sed nulla vitae convallis. Etiam libero quam, pharetra ac est nec, sodales placerat augue. Praesent eu consequat purus.
+Az alkalmazás továbfejlesztésére számos lehetőség adott, amelyek implementálását elősegíti a bővíthetőségre és karbantarthatóságra tekintettel megalkotott modell architektúra. Az egyik legérdekesebb kiegészítése a programnak az aktív P-rendszerek szimulálásának támogatása, amely esetén a régiók töltéssel rendelkeznek és bizonyos szabályok segítségével osztódni is képesek.
