--- a/elteikthesis-master/thesis.bib
+++ b/elteikthesis-master/thesis.bib
@@ -1,7 +1,7 @@
 @misc{tichler_slides,
   author={Tichler Krisztián},
   title = {Számítási modellek},
-  howpublished = {Egyetemi jegyzet},
+  howpublished = {Online kurzus},
   year = {2021},
 }
 
